# frontend

./: app.py  app2.py  baseline.py  baseline2.py  mobecha.bsdesign  pyproject.toml
static/: beethoven.mid  mozart.mid
templates/: index.html
