[tool.poetry]
name = "mobecha_front"
version = "0.1.0"
description = ""
authors = ["WooJun Kim <kwj2870@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
numpy = "^1.22.2"
pypianoroll = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
